[project]
name = "Flask-Principal"
version = "0.4.0"
description = "Identity management for Flask."
readme = "README.md"
license = { file = "LICENSE.txt" }
author = [{ name = "Ali Afshar" }]
maintainers = [{ name = "Pallets Ecosystem", email = "contact@palletsprojects.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "flask",
]

[project.urls]
Documentation = "https://github.com/pallets-eco/flask-principal"
Changes = "https://github.com/pallets-eco/flask-principal/releases/"
Source = "https://github.com/pallets-eco/flask-principal"
Chat = "https://discord.gg/pallets"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flask_principal"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true
source = ["src", "tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.pyright]
pythonVersion = "3.8"
include = ["src", "tests"]
typeCheckingMode = "basic"

[tool.ruff]
src = ["src"]
fix = true
show-fixes = true
output-format = "full"

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # pyflakes
    "I",  # isort
    "UP",  # pyupgrade
    "W",  # pycodestyle warning
]
ignore-init-module-imports = true

[tool.ruff.lint.isort]
force-single-line = true
order-by-type = false